# requirements

./: 404.html  CONTRIBUTING.md  Makefile  README.md  default_requirements.txt  dev_requirements.txt  docs_requirements.txt  frozen_requirements.txt  index.html  mkdocs.yaml  mypy.ini  objects.inv  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml  temp.py  test_requirements.txt  tox.ini
.github/workflows/: distribute.yml  test.yml
api/freeze/: index.html
api/update/: index.html
assets/javascripts/: extra.js
cli/: index.html
contributing/: index.html
dependence/: freeze.py  update.py  utilities.py
docs/: CNAME  cli.md  contributing.md  index.md
docs/api/: freeze.md  update.md  utilities.md
requirements/: __main__.py  freeze.py  update.py  utilities.py
search/: search_index.json
tests/: test_freeze.py  test_requirements_update.py  test_update.py
tests/test_projects/test_project_a/: pyproject.toml  requirements.txt  setup.cfg
tests/test_projects/test_project_b/: pyproject.toml  tox.ini
tests/test_projects/test_project_c/: frozen_requirements.txt  pyproject.toml
