[metadata]
name = requirements
version = 0.0.0
author_email = david@belais.me
description = Requirement (dependency) management for python projects
long_description = file: README.md
long_description_content_type = text/markdown
keywords = requirements
license = MIT
url = https://github.com/enorganic/requirements

[options]
python_requires = ~=3.8
packages = find:
include_package_data = True
install_requires =
	packaging
	pip
	tomli~=2.0
	tomli-w~=1.0
	more-itertools>7
	importlib-metadata>2.0.0
	importlib-resources>6.0.0

[options.entry_points]
console_scripts =
	requirements = requirements.__main__:main

[options.package_data]
* = py.typed
