[metadata]
name = test-project-a
version = 0.0.0

[options]
python_requires = ~=3.9
packages = find:
include_package_data = True
install_requires =
    pip
    setuptools>=0.0.0
    ruff~=0.0

[options.extras_require]
# We include a single-line extra in order to test correct
# aggregation and rendering of an "all" extra
jsonpointer = jsonpointer>=0.0
mypy =
    mypy>=0.0

[options.data_files]
test_project =
	test_project/py.typed
