[build-system]
requires = [
    "setuptools~=0.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "test-project-b"
version = "0.0.0"
requires-python = ">=3.8"
dependencies = [
    "pip>=0.0",
    "setuptools>=0.0.0",
    "ruff~=0.0",
]

[project.optional-dependencies]
jsonpointer = ["jsonpointer>=0.0"]
mypy = ["mypy>=0.0"]

[tool.setuptools]
packages = ["test_project_b"]

[tool.black]
line-length = 79
target-version = [
    "py38",
    "py39",
    "py310",
    "py311",
    "py312",
    "py313"
]
